add some todos!

--- a/app/404.html
+++ b/app/404.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+  //TODO: Make a proper 404 page [Issue: https://github.com/emeasee/draky/issues/3]
+-->
 <html lang="en">
     <head>
         <meta charset="utf-8">
