--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
         <!-- endbuild -->
 
         <!--
-            //TODO: Make custom modernizr script
+            //TODO: Make custom modernizr script [Issue: https://github.com/emeasee/draky/issues/1]
         -->
         <!-- build:js1 js/modernizr.js -->
         <script src="bower/modernizr/modernizr.js"></script>
@@ -34,13 +34,14 @@
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
+
         <!-- build:js2 js/app.js -->
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
         <!-- endbuild -->
 
         <!--
-            //TODO: Create gulp task to replace analytics this with real ID
+            //TODO: Create gulp task to replace analytics this with real ID [Issue: https://github.com/emeasee/draky/issues/2]
         -->
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
