--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Yeh Kubernetes! Time to add some Piment to your cooking!</p>
+        <p>Yeh Kubernetes GO! Time to add some Piment to your cooking!</p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
